@@ -468,6 +468,10 @@ main() {
                 shtk_config_override "${OPTARG}"
                 ;;
 
+            :)
+                shtk_cli_usage_error "Missing argument to option -${OPTARG}"
+                ;;
+
             \?)
                 shtk_cli_usage_error "Unknown option -${OPTARG}"
                 ;;
