@@ -6,6 +6,8 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 * Converted test programs to shtk's unittest library, thus removing the
   dependency on atf-sh and bumping the dependency on shtk to 1.6.
 
+* Fixed option parsing to detect missing arguments to options.
+
 
 Changes in version 1.5
 ======================
